fix letter spacing

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -54,7 +54,7 @@
 		font-size: clamp(26px, 1.6vw, 40px);
 		margin-bottom: min(6.6vh, 70px);
 		font-family: $LouisGeorgeCaf;
-		letter-spacing: 6px;
+		letter-spacing: 5px;
 		white-space: nowrap;
 		color: $blue-main;
 
